# BeamedBlog

./: .env  .gitignore  README.md
backend/: Cargo.toml  Rocket.toml
backend/conf/: log4rs.yml
backend/db_migrations/posts/: up.sql
backend/db_migrations/sessions/: up.sql
backend/db_migrations/users/: up.sql
backend/src/: app_state.rs  main.rs
backend/src/auth/: autherror.rs  mod.rs
backend/src/controllers/: login_controller.rs  mod.rs  user_controller.rs  utils.rs
backend/src/datalayer/: mod.rs  user_data_layer.rs
backend/src/datalayer/db/: mod.rs  schema.rs
backend/src/db/: mod.rs  schema.rs  session.rs  user.rs
backend/src/models/: login_request.rs  mod.rs  post.rs  user.rs
frontend/beamed-blog/: .angular-cli.json  README.md  package-lock.json  package.json
frontend/beamed-blog/e2e/: app.e2e-spec.ts
frontend/beamed-blog/public/: index.html
frontend/beamed-blog/src/: App.css  App.js  AppHeader.css  AppHeader.js  Main.js  index.html  index.js
frontend/beamed-blog/src/app/: app.component.ts
frontend/beamed-blog/src/auth/: Auth.js
frontend/beamed-blog/src/components/: AppHeader.js  AuthNavItem.js  Content.js  Footer.js  Sidebar.js
frontend/beamed-blog/src/components/Login/: LoginError.js
frontend/beamed-blog/src/ext_dependencies/: bootswatch_cyborg.css
frontend/beamed-blog/src/pages/: Home.js  Login.js
frontend/beamed-blog/src/styles/: App.css  AppHeader.css  Content.css  index.css
