[package]
name = "BeamedBlog"
version = "0.1.0"
authors = ["Beamed <beamed@umich.edu>"]

[dependencies]
diesel = { features = ["postgres"] }
diesel_codegen = { features = ["postgres"] }
rocket = "^0.3"
rocket_codegen = "^0.3"
rocket_contrib = "^0.3"
dotenv = "0.9.0"
bcrypt = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
csrf = "*"
data-encoding = "2.1.1"
r2d2 = "0.8"
r2d2-diesel = "1.0"
log = "0.3.8"
log4rs = "0.7"
rust-crypto = "^0.2"
time = "0.1"
