[package]
name = "BeamedBlog"
version = "0.1.0"
authors = ["Beamed <beamed@umich.edu>"]

[dependencies]
diesel = { version = "1.3.2", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
bcrypt = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.3.8"
time = "0.1"
cookie = "0.10.1"
env_logger = "0.5.12"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }